# thaliox-os

./: CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  README.md
crates/api/: Cargo.toml
crates/api/examples/: gateway.rs
crates/api/src/: lib.rs
crates/api/tests/: gateway.rs
crates/cap/: Cargo.toml
crates/cap/examples/: e3_capability_addressed.rs
crates/cap/src/: lib.rs
crates/cap/src/experiment/: e3.rs  mod.rs
crates/cognition/: Cargo.toml
crates/cognition/examples/: e1_mergeable_latent.rs  e2_energy_readout.rs
crates/cognition/src/: anthropic.rs  lib.rs  openai.rs  state.rs
crates/cognition/src/experiment/: e1.rs  e2.rs  mod.rs
crates/core/: Cargo.toml
crates/core/src/: agent.rs  budget.rs  call.rs  capability.rs  error.rs  lib.rs  message.rs  space.rs  tool.rs
crates/fabric/: Cargo.toml
crates/fabric-node/: Cargo.toml
crates/fabric-node/src/: main.rs
crates/fabric/src/: lib.rs
crates/guest-runner/: Cargo.toml
crates/guest-runner/src/: main.rs
crates/memory/: Cargo.toml
crates/memory/src/: lib.rs
crates/runtime/: Cargo.toml
crates/runtime/examples/: autonomous_agent.rs  e4_dataflow_pass.rs  live_node.rs  secure_agent.rs  single_node.rs  tool_agent.rs
crates/runtime/src/: agent.rs  cluster.rs  control.rs  firecracker.rs  learn.rs  lib.rs  package.rs  supervisor.rs  update.rs  vmproto.rs
crates/runtime/src/experiment/: e4.rs  mod.rs
crates/substrate/: Cargo.toml
crates/substrate/src/: ledger.rs  lib.rs  policy.rs  probe.rs
crates/substrate/src/experiment/: e6.rs  mod.rs
crates/tools/: Cargo.toml
crates/tools/src/: fetch.rs  lib.rs  search.rs
docs/: M1-MILESTONE.md  M2-PROGRESS.md  MASTER_PLAN.md
docs/rfcs/: 0001-abstract-machine.md  0002-near-term-model-architecture.md  0003-meld-cognitive-substrate.md  0004-firecracker-deploy.md  0005-multi-instance-ha.md  0006-cluster-multiplatform.md  0007-learned-control-plane.md  0008-push-the-stack-down.md  0009-learning-and-self-evolution.md
tools/: fc-host-setup.sh
