[package]
name = "thaliox-cognition"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX cognition (L1) — unified LLM interface: remote backends (Anthropic/OpenAI) + local offline"

[dependencies]
thaliox-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
