[package]
name = "thaliox-fabric-node"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX fabric node — a cluster node binary: serve/receive migrations over TCP (M4b cross-host validation)"

[[bin]]
name = "fabric-node"
path = "src/main.rs"

[dependencies]
thaliox-core.workspace = true
# Lean (no remote LLM backends) so the node binary links static/musl for a
# no-Rust host.
thaliox-fabric = { path = "../fabric" }
thaliox-runtime = { path = "../runtime", default-features = false }
thaliox-cognition = { path = "../cognition", default-features = false }
thaliox-memory.workspace = true
tokio = { workspace = true }
