[package]
name = "thaliox-fabric"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX fabric (L3) — agent↔agent vector transport, team orchestration, CRDT state replication"

[dependencies]
thaliox-core.workspace = true
# The cluster layer (L3) deploys/migrates agents, so it sits above the runtime
# (L2). `default-features = false` keeps it lean (no remote LLM backends) — the
# fabric uses LocalDeploy + host-provided minds, so it can build static/musl.
thaliox-runtime = { path = "../runtime", default-features = false }
async-trait.workspace = true
serde.workspace = true
tokio = { workspace = true }
serde_json.workspace = true

[dev-dependencies]
thaliox-cognition.workspace = true
thaliox-memory.workspace = true
