[package]
name = "thaliox-guest-runner"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX guest agent-runner — runs an agent inside a Firecracker microVM (RFC-0004 F2a)"

[[bin]]
name = "thaliox-runner"
path = "src/main.rs"

[dependencies]
thaliox-core.workspace = true
# Offline build — no remote LLM backends, so the runner statically musl-links
# without pulling reqwest (RFC-0004 F2a).
thaliox-runtime = { path = "../runtime", default-features = false, features = ["firecracker"] }
thaliox-cognition = { path = "../cognition", default-features = false }
thaliox-memory.workspace = true
tokio = { workspace = true }
libc.workspace = true
