[package]
name = "thaliox-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX runtime (L2) — agent execution unit, lifecycle, attention-budget scheduling, checkpoints"

[dependencies]
thaliox-core.workspace = true
thaliox-cognition.workspace = true
serde.workspace = true

[dev-dependencies]
thaliox-memory.workspace = true
thaliox-tools.workspace = true
thaliox-cap.workspace = true
tokio.workspace = true
async-trait.workspace = true
