[package]
name = "thaliox-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX runtime (L2) — agent execution unit, lifecycle, attention-budget scheduling, checkpoints"

[features]
default = ["remote"]
# Forwards to cognition's remote backends. On by default so examples/consumers
# are unchanged; the guest agent-runner disables it for an offline build.
remote = ["thaliox-cognition/remote"]
# Host-side Firecracker launch target (RFC-0004 F3). std-only; self-hosted
# integration only (needs a KVM host), so it is off by default and out of CI.
firecracker = []

[dependencies]
thaliox-core.workspace = true
thaliox-cognition = { path = "../cognition", default-features = false }
serde.workspace = true
serde_json.workspace = true

[dev-dependencies]
thaliox-memory.workspace = true
thaliox-tools.workspace = true
thaliox-cap.workspace = true
tokio.workspace = true
async-trait.workspace = true
