[package]
name = "thaliox-substrate"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX substrate (L0) — the substrate ledger (TAM-op cost attribution), the E6 meter gate, and the INV-2 → seccomp deny-floor compiler (RFC-0008 M6a)"

[dependencies]
thaliox-core.workspace = true
serde.workspace = true
serde_json.workspace = true

[features]
# The live eBPF probe (attribution + LSM enforcement) — built only on the
# bare-metal leg; CI runs the replay probe and the pure-logic suites.
ebpf = []
