[package]
name = "thaliox-tools"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "THALIOX tools — an agent's external actions (web_search via Tavily, fetch); capability-gated via ToolInvoke"

[dependencies]
thaliox-core.workspace = true
async-trait.workspace = true
serde_json.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
